--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# For running the frontend
+# Set this to the URL of your frontend
+PUBLIC_URL=http://localhost:5173
+
 # For getting financial data to power the hedge fund
 # Get your Financial Datasets API key from https://financialdatasets.ai/
 FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
