--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,12 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    command: poetry run uvicorn app.backend.main:app --host 0.0.0.0 --port ${BACKEND_PORT:-8000}
+    command: poetry run uvicorn app.backend.main:app --host 0.0.0.0 --port 8000
     env_file:
       - .env
-    environment:
-      BACKEND_PORT: ${BACKEND_PORT:-8000}
-      FRONTEND_ORIGIN: ${FRONTEND_ORIGIN:-http://localhost:5173}
     working_dir: /app
     volumes:
       - ./:/app
-    ports:
-      - "${BACKEND_PORT:-8000}:${BACKEND_PORT:-8000}"
     restart: unless-stopped
 
   frontend:
@@ -25,11 +20,9 @@ services:
     working_dir: /usr/src/app
     command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
     environment:
-      VITE_API_URL: ${VITE_API_URL:-http://localhost:8000}
+      VITE_API_URL: http://backend:8000
     volumes:
       - ./app/frontend:/usr/src/app
-    ports:
-      - "${FRONTEND_PORT:-5173}:5173"
     depends_on:
       - backend
     restart: unless-stopped
