--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,19 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     command: poetry run uvicorn app.backend.main:app --host 0.0.0.0 --port 8000
-    env_file:
-      - .env
+    environment:
+      - FRONTEND_ORIGIN: ${PUBLIC_URL}
+      - FINANCIAL_DATASETS_API_KEY: ${FINANCIAL_DATASETS_API_KEY}
+      - OPENAI_API_KEY: ${OPENAI_API_KEY}
+      - ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
+      - DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      - GROQ_API_KEY: ${GROQ_API_KEY}
+      - XAI_API_KEY: ${XAI_API_KEY}
+      - GIGACHAT_API_KEY: ${GIGACHAT_API_KEY}
+      - OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
+      - AZURE_OPENAI_API_KEY: ${AZURE_OPENAI_API_KEY}
+      - AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
+      - AZURE_OPENAI_DEPLOYMENT_NAME: ${AZURE_OPENAI_DEPLOYMENT_NAME}
     working_dir: /app
     volumes:
       - ./:/app
@@ -20,7 +31,7 @@ services:
     working_dir: /usr/src/app
     command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
     environment:
-      VITE_API_URL: http://backend:8000
+      VITE_API_URL: ${VITE_API_URL:-http://backend:8000}
     volumes:
       - ./app/frontend:/usr/src/app
     depends_on:
