feat: add backend API URL to environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # For running the frontend
 # Set this to the URL of your frontend
 PUBLIC_URL=http://localhost:5173
+VITE_API_URL=http://backend:8000
 
 # For getting financial data to power the hedge fund
 # Get your Financial Datasets API key from https://financialdatasets.ai/
