--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 # For running LLMs hosted by openai (GPT 5, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
+OPENAI_API_BASE=https://lm.gptbox.dev/v1
 
 # For running LLMs hosted by anthropic (claude-4-sonnet, claude-4.1-opus, etc.)
 # Get your Anthropic API key from https://anthropic.com/
