feat: add OPENAI_API_BASE environment variable to docker-compose config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,19 @@ services:
       dockerfile: docker/Dockerfile
     command: poetry run uvicorn app.backend.main:app --host 0.0.0.0 --port 8000
     environment:
-      - FRONTEND_ORIGIN: ${PUBLIC_URL}
-      - FINANCIAL_DATASETS_API_KEY: ${FINANCIAL_DATASETS_API_KEY}
-      - OPENAI_API_KEY: ${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
-      - DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
-      - GROQ_API_KEY: ${GROQ_API_KEY}
-      - XAI_API_KEY: ${XAI_API_KEY}
-      - GIGACHAT_API_KEY: ${GIGACHAT_API_KEY}
-      - OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
-      - AZURE_OPENAI_API_KEY: ${AZURE_OPENAI_API_KEY}
-      - AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
-      - AZURE_OPENAI_DEPLOYMENT_NAME: ${AZURE_OPENAI_DEPLOYMENT_NAME}
+      FRONTEND_ORIGIN: ${PUBLIC_URL}
+      FINANCIAL_DATASETS_API_KEY: ${FINANCIAL_DATASETS_API_KEY}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      OPENAI_API_BASE: ${OPENAI_API_BASE}
+      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
+      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      GROQ_API_KEY: ${GROQ_API_KEY}
+      XAI_API_KEY: ${XAI_API_KEY}
+      GIGACHAT_API_KEY: ${GIGACHAT_API_KEY}
+      OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
+      AZURE_OPENAI_API_KEY: ${AZURE_OPENAI_API_KEY}
+      AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
+      AZURE_OPENAI_DEPLOYMENT_NAME: ${AZURE_OPENAI_DEPLOYMENT_NAME}
     working_dir: /app
     volumes:
       - ./:/app
