--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 # For running the frontend
-# Set this to the URL of your frontend
+# Set this to the public URL of your frontend (must include scheme)
 PUBLIC_URL=http://localhost:5173
-VITE_API_URL=http://backend:8000
+
+# The backend API URL reachable by the browser
+# When deploying HTTPS, set to https://your-backend-domain
+VITE_API_URL=http://localhost:8000
+
+# Ports to expose when running the unified docker-compose stack
+FRONTEND_PORT=5173
+BACKEND_PORT=8000
 
 # For getting financial data to power the hedge fund
 # Get your Financial Datasets API key from https://financialdatasets.ai/
@@ -10,7 +17,7 @@ FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 # For running LLMs hosted by openai (GPT 5, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
-OPENAI_API_BASE=https://lm.gptbox.dev/v1
+OPENAI_API_BASE=https://api.openai.com/v1
 
 # For running LLMs hosted by anthropic (claude-4-sonnet, claude-4.1-opus, etc.)
 # Get your Anthropic API key from https://anthropic.com/
