--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,23 @@
-# AI Hedge Fund stack (no local Ollama)
+version: "3.8"
 
 services:
-  backend:
-    container_name: ai-hedge-fund-backend
+  app:
+    container_name: ai-hedge-fund
     build:
       context: .
-      dockerfile: docker/Dockerfile
-    command: poetry run uvicorn app.backend.main:app --host 0.0.0.0 --port 8000
+      dockerfile: Dockerfile
     environment:
+      # Frontend/Backend URLs
+      PUBLIC_URL: ${PUBLIC_URL}
+      VITE_API_URL: ${VITE_API_URL}
       FRONTEND_ORIGIN: ${PUBLIC_URL}
+      # App server bindings
+      BACKEND_HOST: 0.0.0.0
+      BACKEND_PORT: ${BACKEND_PORT:-8000}
+      FRONTEND_HOST: 0.0.0.0
+      FRONTEND_PORT: ${FRONTEND_PORT:-5173}
+      NODE_ENV: production
+      # Provider keys
       FINANCIAL_DATASETS_API_KEY: ${FINANCIAL_DATASETS_API_KEY}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
@@ -21,22 +30,11 @@ services:
       AZURE_OPENAI_API_KEY: ${AZURE_OPENAI_API_KEY}
       AZURE_OPENAI_ENDPOINT: ${AZURE_OPENAI_ENDPOINT}
       AZURE_OPENAI_DEPLOYMENT_NAME: ${AZURE_OPENAI_DEPLOYMENT_NAME}
-    working_dir: /app
-    volumes:
-      - ./:/app
-    restart: unless-stopped
-
-  frontend:
-    container_name: ai-hedge-fund-frontend
-    image: node:20-alpine
-    working_dir: /usr/src/app
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
-    environment:
-      VITE_API_URL: ${VITE_API_URL:-http://backend:8000}
-    volumes:
-      - ./app/frontend:/usr/src/app
-    depends_on:
-      - backend
+      # Disable auto-opening the browser in containers
+      DISABLE_BROWSER: "1"
+    ports:
+      - "${FRONTEND_PORT:-5173}:5173"
+      - "${BACKEND_PORT:-8000}:8000"
     restart: unless-stopped
 
 networks:
