--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
       AZURE_OPENAI_DEPLOYMENT_NAME: ${AZURE_OPENAI_DEPLOYMENT_NAME}
       # Disable auto-opening the browser in containers
       DISABLE_BROWSER: "1"
-    ports:
-      - "${FRONTEND_PORT:-5173}:5173"
-      - "${BACKEND_PORT:-8000}:8000"
+    #ports:
+    #  - "${FRONTEND_PORT:-5173}:5173"
+    #  - "${BACKEND_PORT:-8000}:8000"
     restart: unless-stopped
 
 networks:
