feat: configure API URL to use same-origin /api by default and improve Docker networking

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,15 @@
 PUBLIC_URL=http://localhost:5173
 
 # The backend API URL reachable by the browser
-# When deploying HTTPS, set to https://your-backend-domain
-VITE_API_URL=http://localhost:8000
+# Optional: leave blank to use same-origin '/api' (recommended)
+# VITE_API_URL=https://your-frontend-domain/api
 
 # Ports to expose when running the unified docker-compose stack
 FRONTEND_PORT=5173
 BACKEND_PORT=8000
+
+# Run frontend dev server inside container (1) or serve built assets via FastAPI (0)
+FRONTEND_DEV=0
 
 # For getting financial data to power the hedge fund
 # Get your Financial Datasets API key from https://financialdatasets.ai/
